worldserve/cloudformation/regional_infrastructure.yaml
---
AWSTemplateFormatVersion: '2010-09-09'
Parameters:
  KeyName:
    Description: Amazon EC2 Key Pair
    Type: "AWS::EC2::KeyPair::KeyName"
Resources:
  MountTarget:
    Type: "AWS::EFS::MountTarget"
    Properties:
      FileSystemId:
        Ref: "ContainerDataFileSystem"
      SubnetId:
        Ref: "PublicSubnet1"
      SecurityGroups:
        -
          Ref: "MountTargetSecurityGroup"
  MountTargetSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Port 2049
      VpcId:
        Ref: Vpc
  MountTargetSecurityGroupnboundRule:
    Type: AWS::EC2::SecurityGroupIngress
    Properties:
      IpProtocol: tcp
      FromPort: '2049'
      ToPort: '2049'
      CidrIp: 10.0.0.0/16
      GroupId:
        Fn::GetAtt:
        - MountTargetSecurityGroup
        - GroupId
  ContainerDataFileSystem:
    Type: "AWS::EFS::FileSystem"
    Properties:
      FileSystemTags:
        -
          Key: "Name"
          Value: "ContainerDataFileSystem"
  ArkStack:
    Type: AWS::CloudFormation::Stack
    Properties:
      TemplateURL: 'https://s3.amazonaws.com/msv-templates/ark/regional.yaml'
      Parameters:
        KeyName: !Ref KeyName
        Vpc: !Ref Vpc
  Vpc:
    Type: AWS::EC2::VPC
    Properties:
      CidrBlock: 10.0.0.0/16
      EnableDnsHostnames: 'true'
      EnableDnsSupport: 'true'
  InternetGateway:
    Type: AWS::EC2::InternetGateway
  AttachGateway:
    Type: AWS::EC2::VPCGatewayAttachment
    Properties:
      VpcId: !Ref 'Vpc'
      InternetGatewayId: !Ref 'InternetGateway'
  PublicSubnet1:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref 'Vpc'
      CidrBlock: 10.0.0.0/18
      Tags:
      - Key: Name
        Value: msv-container-agent-subnet
      MapPublicIpOnLaunch: 'true'
  PublicRouteTable:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref 'Vpc'
      Tags:
      - Key: Name
        Value: PublicRouteTable
  PublicSubnet1RouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref 'PublicSubnet1'
      RouteTableId: !Ref 'PublicRouteTable'
  PublicRoute:
    Type: AWS::EC2::Route
    DependsOn: AttachGateway
    Properties:
      RouteTableId: !Ref 'PublicRouteTable'
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId: !Ref 'InternetGateway'
Mappings:
  RegionMap:
    us-east-1:
      AMI: "ami-6411e20d"
    us-west-1:
      AMI: "ami-9398d3e0"
    eu-west-1:
      amazon: "ami-9398d3e0"
      ubuntu: "ami-0d77397e"
      ecsoptimized: "ami-a7f2acc1"
    ap-southeast-1:
      AMI: "ami-66f28c34"
    ap-northeast-1:
      AMI: "ami-9c03a89d"
  Beanstalk2Route53HostedZoneId:
    us-east-1:
      HostedZoneId: Z3DZXE0Q79N41H
    us-west-1:
      HostedZoneId: Z1M58G0W56PQJA
    us-west-2:
      HostedZoneId: Z33MTJ483KN6FU
    eu-west-1:
      HostedZoneId: Z3NF1Z3NOM5OY2
    ap-northeast-1:
      HostedZoneId: Z2YN17T5R711GT
    ap-southeast-1:
      HostedZoneId: Z1WI8VXHPB1R38
    sa-east-1:
      HostedZoneId: Z2ES78Y61JGQKS
